--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@ body{
     font-family: 'Open Sans', sans-serif;
     padding: 20px 30px;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
