--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -15,6 +15,7 @@
     cursor: pointer;
     display: flex;
     justify-content: center;
+    border-radius: 1em;
   
     &:hover {
       background-color: white;
